--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@babel/node": "^7.22.10",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
-    "pug": "^3.0.2"
+    "pug": "^3.0.2",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.10"
